# ibank-wallet

./: .gitmodules  Cargo.toml  README.md
crates/ibank-wallet-chains/: Cargo.toml
crates/ibank-wallet-chains/src/: evm.rs  lib.rs
crates/ibank-wallet-core/: Cargo.toml
crates/ibank-wallet-core/src/: audit.rs  chain.rs  error.rs  lib.rs
crates/ibank-wallet-crypto/: Cargo.toml  README.md  build.rs
crates/ibank-wallet-crypto/examples/: evm.rs  evm_sign_message.rs  evm_sign_tx_1559.rs
crates/ibank-wallet-crypto/include/: ffi.h
crates/ibank-wallet-crypto/src/: lib.rs
crates/ibank-wallet-crypto/src/wallet_core/: ffi.cc  ffi.rs  mod.rs
crates/ibank-wallet-crypto/tests/: wallet_core_evm.rs
crates/ibank-wallet-policy/: Cargo.toml
crates/ibank-wallet-policy/src/: lib.rs
crates/ibank-wallet-runtime/: Cargo.toml
crates/ibank-wallet-runtime/src/: lib.rs
